force-app/main/default/objects/Account/fields/Nature_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Business__c</fullName>
    <label>Nature of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>accommodation</fullName>
                <label>Accommodation and Food Services (excluding Casinos)</label>
            </value>
            <value>
                <fullName>accounting</fullName>
                <label>Accounting and Legal Firms</label>
            </value>
            <value>
                <fullName>agriculture</fullName>
                <label>Agriculture, Forestry, Fishing and Hunting</label>
            </value>
            <value>
                <fullName>art</fullName>
                <label>Art Dealers and Auction Houses</label>
            </value>
            <value>
                <fullName>casino</fullName>
                <label>Casinos and Gambling</label>
            </value>
            <value>
                <fullName>construction</fullName>
                <label>Construction</label>
            </value>
            <value>
                <fullName>cryptoNetwork</fullName>
                <label>Crypto Network</label>
            </value>
            <value>
                <fullName>dapp</fullName>
                <label>DApp Providers and Developers</label>
            </value>
            <value>
                <fullName>preciousMetals</fullName>
                <label>Dealers and Retailers of Physical Precious Metals and/or Precious Stones</label>
            </value>
            <value>
                <fullName>defiExchange</fullName>
                <label>DeFI: Decentralized Exchanges</label>
            </value>
            <value>
                <fullName>defiOther</fullName>
                <label>DeFi: Other</label>
            </value>
            <value>
                <fullName>defiWallet</fullName>
                <label>DeFI: Self-Hosted Wallets</label>
            </value>
            <value>
                <fullName>education</fullName>
                <label>Education</label>
            </value>
            <value>
                <fullName>familyOffices</fullName>
                <label>Family Offices and Personal Investment Companies</label>
            </value>
            <value>
                <fullName>film</fullName>
                <label>Film, Television, Internet, and Print media</label>
            </value>
            <value>
                <fullName>fiAssetMgr</fullName>
                <label>Financial Institutions: Asset Managers, Hedge Funds, and Funds</label>
            </value>
            <value>
                <fullName>fiBank</fullName>
                <label>Financial Institutions: Banks and Credit Unions</label>
            </value>
            <value>
                <fullName>fiBrokerDealer</fullName>
                <label>Financial Institutions: Broker Dealers</label>
            </value>
            <value>
                <fullName>fiCryptoATM</fullName>
                <label>Financial Institutions: Crypto ATM Operator</label>
            </value>
            <value>
                <fullName>fiCryptoExchanges</fullName>
                <label>Financial Institutions: Crypto Exchanges</label>
            </value>
            <value>
                <fullName>fiCryptoInvesting</fullName>
                <label>Financial Institutions: Crypto Investing and Lending</label>
            </value>
            <value>
                <fullName>fiCryptoOnRamp</fullName>
                <label>Financial Institutions: Crypto On-Ramps / Retail OTC Trading</label>
            </value>
            <value>
                <fullName>fiCryptoWallets</fullName>
                <label>Financial Institutions: Crypto Wallets and Custodians</label>
            </value>
            <value>
                <fullName>fiOTC</fullName>
                <label>Financial Institutions: OTC Trading</label>
            </value>
            <value>
                <fullName>fiP2P</fullName>
                <label>Financial Institutions: Peer to Peer Payments / Money Transmitters</label>
            </value>
            <value>
                <fullName>healthCare</fullName>
                <label>Health Care</label>
            </value>
            <value>
                <fullName>manufacturingAutomobiles</fullName>
                <label>Manufacturing, Wholesale and Retail: Automobiles and Other Vehicles</label>
            </value>
            <value>
                <fullName>manufacturingElectronics</fullName>
                <label>Manufacturing, Wholesale and Retail: Electronics (including Computers)</label>
            </value>
            <value>
                <fullName>manufacturingJewelry</fullName>
                <label>Manufacturing, Wholesale and Retail: High Value Goods (Jewelry, Watches, Antiques)</label>
            </value>
            <value>
                <fullName>manufacturingOther</fullName>
                <label>Manufacturing, Wholesale and Retail: Other Goods</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>