force-app/main/default/objects/Account/fields/Needs_Lifecycle_Recalculation__c.field-meta.xml
<CustomField>
    <fullName>Needs_Lifecycle_Recalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Lifecycle Recalculation</label>
    <type>Checkbox</type>
</CustomField>