force-app/main/default/objects/Account/fields/Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date__c</fullName>
    <description>Used by CSMs to document when their next step on the account. The field will be located within the Account Plan tab.</description>
    <label>Next Step Date</label>
    <type>Date</type>
</CustomField>