force-app/main/default/objects/Account/fields/Onboarding_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A representative from the Onboarding Concierge team</description>
    <label>Onboarding Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>