force-app/main/default/objects/Account/fields/Onboarding_Specialist_Opp__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Specialist_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onboarding Specialist-Opp</label>
    <type>Checkbox</type>
</CustomField>