force-app/main/default/objects/Account/fields/OTC_Liquidity_Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>OTC_Liquidity_Partner_Status__c</fullName>
    <description>Used to track indirect liquidity partner mutual clients.</description>
    <inlineHelpText>Select the option for the current status of the indirect liquidity partner mutual clients.</inlineHelpText>
    <label>OTC Liquidity Partner Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending DDQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>