force-app/main/default/objects/Account/fields/OTC_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>OTC_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link the Partner Account associated with this mutual client.</description>
    <inlineHelpText>Link the Partner Account associated with this mutual client.</inlineHelpText>
    <label>OTC Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>