force-app/main/default/objects/Account/fields/Other_blockchains_of_interest__c.field-meta.xml
<CustomField>
    <fullName>Other_blockchains_of_interest__c</fullName>
    <label>Other Blockchains of Interest?</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>