force-app/main/default/objects/Account/fields/Owner_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Owner_Is_Active__c</fullName>
    <formula>Owner.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Is Active?</label>
    <type>Checkbox</type>
</CustomField>