force-app/main/default/objects/Account/fields/Participating_on_behalf_of_a_Business__c.field-meta.xml
<CustomField>
    <fullName>Participating_on_behalf_of_a_Business__c</fullName>
    <label>Participating on behalf of a Business?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise / financial institution</fullName>
            </value>
            <value>
                <fullName>Startup Company</fullName>
            </value>
            <value>
                <fullName>Individual Developer</fullName>
            </value>
            <value>
                <fullName>Individual USDC User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>