force-app/main/default/objects/Account/fields/Partner_Handoff__c.field-meta.xml
<CustomField>
    <fullName>Partner_Handoff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Handoff</label>
    <type>Checkbox</type>
</CustomField>