force-app/main/default/objects/Account/fields/Partner_Lead__c.field-meta.xml
<CustomField>
    <fullName>Partner_Lead__c</fullName>
    <label>Partner Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>