force-app/main/default/objects/Account/fields/Partner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Partner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsG8Uf</relationshipName>
    <type>Lookup</type>
</CustomField>