force-app/main/default/objects/Account/fields/Partner_Marketing_User__c.field-meta.xml
<CustomField>
    <fullName>Partner_Marketing_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Marketing User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>