force-app/main/default/objects/Account/fields/Partner_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Partner_Metrics__c</fullName>
    <description>Used to link the Partner Metrics</description>
    <inlineHelpText>Populate this field with a link to the partner/mutual client&apos;s metrics.</inlineHelpText>
    <label>Partner Metrics</label>
    <type>Url</type>
</CustomField>