force-app/main/default/objects/Account/fields/Partner_Program_Interest__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Interest__c</fullName>
    <label>Partner Program Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Partner</fullName>
            </value>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
            <value>
                <fullName>Wallet Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>