force-app/main/default/objects/Account/fields/Partner_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Partner_Reasoning__c</fullName>
    <label>Partner Reasoning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>