force-app/main/default/objects/Account/fields/Partner_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referrer__c</fullName>
    <label>Partner Referrer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AirTM</fullName>
            </value>
            <value>
                <fullName>Algorand</fullName>
            </value>
            <value>
                <fullName>Avalanche</fullName>
            </value>
            <value>
                <fullName>Bitwave</fullName>
            </value>
            <value>
                <fullName>Ethereum</fullName>
            </value>
            <value>
                <fullName>Fireblocks</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Hedera</fullName>
            </value>
            <value>
                <fullName>Integral</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Mojito</fullName>
            </value>
            <value>
                <fullName>Moneygram</fullName>
            </value>
            <value>
                <fullName>Plaid</fullName>
            </value>
            <value>
                <fullName>Qredo</fullName>
            </value>
            <value>
                <fullName>Ramp</fullName>
            </value>
            <value>
                <fullName>Request Finance</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Solana</fullName>
            </value>
            <value>
                <fullName>Stellar</fullName>
            </value>
            <value>
                <fullName>Tres Finance</fullName>
            </value>
            <value>
                <fullName>TRON</fullName>
            </value>
            <value>
                <fullName>Utopia</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Yuno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>