force-app/main/default/objects/Account/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <description>Used to categorize our active customers/partners</description>
    <inlineHelpText>Used to categorize our active customers/partners</inlineHelpText>
    <label>Partner Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Circle Alliance Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>