force-app/main/default/objects/Account/fields/Payments_API__c.field-meta.xml
<CustomField>
    <fullName>Payments_API__c</fullName>
    <label>Payments API</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payments_API</valueSetName>
    </valueSet>
</CustomField>