force-app/main/default/objects/Account/fields/Payouts_API__c.field-meta.xml
<CustomField>
    <fullName>Payouts_API__c</fullName>
    <label>Payouts API</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payouts_API</valueSetName>
    </valueSet>
</CustomField>