force-app/main/default/objects/Account/fields/PDR_Owner_text__c.field-meta.xml
<CustomField>
    <fullName>PDR_Owner_text__c</fullName>
    <formula>PDR_Owner__r.FirstName +&quot; &quot;+ PDR_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDR Owner (text)</label>
    <type>Text</type>
</CustomField>