force-app/main/default/objects/Account/fields/Performance_Objective_Health__c.field-meta.xml
<CustomField>
    <fullName>Performance_Objective_Health__c</fullName>
    <label>Performance Objective Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Off Track</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Objective Not Met</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Exceeded Expectations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>