force-app/main/default/objects/Account/fields/Pitch_Deck__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Deck__c</fullName>
    <label>Pitch Deck</label>
    <type>Url</type>
</CustomField>