force-app/main/default/objects/Account/fields/Platform_Owner__c.field-meta.xml
<CustomField>
    <fullName>Platform_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Platform Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>