force-app/main/default/objects/Account/fields/Platform_Owner_Opp__c.field-meta.xml
<CustomField>
    <fullName>Platform_Owner_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Platform Owner-Opp</label>
    <type>Checkbox</type>
</CustomField>