force-app/main/default/objects/Account/fields/PM_Service_Category__c.field-meta.xml
<CustomField>
    <fullName>PM_Service_Category__c</fullName>
    <label>PM Service Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Care - General</fullName>
            </value>
            <value>
                <fullName>BD - Prospect</fullName>
            </value>
            <value>
                <fullName>Partner Manager - Growth</fullName>
            </value>
            <value>
                <fullName>Partner Manager - Strategic</fullName>
            </value>
            <value>
                <fullName>Care - Specialized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>