force-app/main/default/objects/Account/fields/Post_Deal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Post_Deal_Stage__c</fullName>
    <label>Post Deal Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Launched</fullName>
            </value>
            <value>
                <fullName>Not Active</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Pre-Launch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>