force-app/main/default/objects/Account/fields/Post_Sales_SE_Opp__c.field-meta.xml
<CustomField>
    <fullName>Post_Sales_SE_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post-Sales SE-Opp</label>
    <type>Checkbox</type>
</CustomField>