force-app/main/default/objects/Account/fields/Post_Sales_Solution_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Post_Sales_Solution_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post-Sales Solution Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsGrmS</relationshipName>
    <type>Lookup</type>
</CustomField>