force-app/main/default/objects/Account/fields/Pre_Sales_SE_Opp__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_SE_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Sales SE-Opp</label>
    <type>Checkbox</type>
</CustomField>