force-app/main/default/objects/Account/fields/Pre_Sales_Solution_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_Solution_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-Sales Solution Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts10</relationshipName>
    <type>Lookup</type>
</CustomField>