force-app/main/default/objects/Account/fields/Primary_Industry_Cognism__c.field-meta.xml
<CustomField>
    <fullName>Primary_Industry_Cognism__c</fullName>
    <label>Primary Industry (Cognism)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>