force-app/main/default/objects/Account/fields/Principal_Place_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Principal_Place_of_Business__c</fullName>
    <label>Principal Place of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>