force-app/main/default/objects/Account/fields/Qualified_Disqualified_Advanced_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Disqualified_Advanced_Engaged__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Qualified Disqualified Advanced Engaged</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts9</relationshipName>
    <type>Lookup</type>
</CustomField>