force-app/main/default/objects/Account/fields/Read_Only_API__c.field-meta.xml
<CustomField>
    <fullName>Read_Only_API__c</fullName>
    <formula>IF( Read_Only_API_Number__c &gt;0,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Does this customer have Read Only API?</inlineHelpText>
    <label>Read Only API</label>
    <type>Checkbox</type>
</CustomField>