force-app/main/default/objects/Account/fields/Read_Only_API_Number__c.field-meta.xml
<CustomField>
    <fullName>Read_Only_API_Number__c</fullName>
    <label>Read Only API Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>