force-app/main/default/objects/Account/fields/Reason_for_leaving__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_leaving__c</fullName>
    <label>Reason for Leaving</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>