force-app/main/default/objects/Account/fields/Recent_Deal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recent_Deal_Amount__c</fullName>
    <label>Recent Deal Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>