force-app/main/default/objects/Account/fields/Relationship_Health__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Health__c</fullName>
    <inlineHelpText>Please see the Guru card - Account Health Guidance for CSMs</inlineHelpText>
    <label>Relationship Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Healthy</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>