force-app/main/default/objects/Account/fields/Report_to_Post_Deal_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Report_to_Post_Deal_Dashboard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by CSM leads to include an account for reporting within the post-sales dashboard</description>
    <inlineHelpText>Used by CSM leads to include an account for reporting within the post-sales dashboard</inlineHelpText>
    <label>Report to Post-Deal Dashboard</label>
    <type>Checkbox</type>
</CustomField>