force-app/main/default/objects/Account/fields/Revision_Status__c.field-meta.xml
<CustomField>
    <fullName>Revision_Status__c</fullName>
    <label>Revision Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>