force-app/main/default/objects/Account/fields/Risk_Assesment_Form__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assesment_Form__c</fullName>
    <label>Risk Assesment Form</label>
    <type>Url</type>
</CustomField>