force-app/main/default/objects/Account/fields/Risk_Launch_Plan__c.field-meta.xml
<CustomField>
    <fullName>Risk_Launch_Plan__c</fullName>
    <label>Risk Launch Plan</label>
    <type>Url</type>
</CustomField>