force-app/main/default/objects/Account/fields/RUID__c.field-meta.xml
<CustomField>
    <fullName>RUID__c</fullName>
    <label>RUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>