force-app/main/default/objects/Account/fields/Running_Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Running_Meeting_Notes__c</fullName>
    <inlineHelpText>Link to Meeting Notes</inlineHelpText>
    <label>Running Meeting Notes</label>
    <type>Url</type>
</CustomField>