force-app/main/default/objects/Account/fields/Sales_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Sales_Coverage__c</fullName>
    <label>Sales Coverage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>