force-app/main/default/objects/Account/fields/Salesloft_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesloft_ID__c</fullName>
    <label>Salesloft ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>