force-app/main/default/objects/Account/fields/SDR_Assignment_Complete__c.field-meta.xml
<CustomField>
    <fullName>SDR_Assignment_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SDR Assignment Complete</label>
    <type>Checkbox</type>
</CustomField>