force-app/main/default/objects/Account/fields/SDR_Owner_Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>SDR_Owner_Meeting_Link__c</fullName>
    <description>This is used to get the text value to display in Salesloft</description>
    <formula>SDR_Owner__r.Meeting_Link__c</formula>
    <label>SDR Owner Meeting Link</label>
    <type>Text</type>
</CustomField>