force-app/main/default/objects/Account/fields/SDR_Owner_Opp__c.field-meta.xml
<CustomField>
    <fullName>SDR_Owner_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SDR Owner-Opp</label>
    <type>Checkbox</type>
</CustomField>