force-app/main/default/objects/Account/fields/SDR_Target_Account_Nomination__c.field-meta.xml
<CustomField>
    <fullName>SDR_Target_Account_Nomination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by SDRs to nominate a Target Account - new process 2023-01 - will trigger a workflow to set Target Account = true

Target Account nomination criteria here 
https://circle.seismic.com/app?ContentId=ad327714-dd63-4ed2-a2b8-955abee71766</description>
    <label>SDR Target Account Nomination</label>
    <type>Checkbox</type>
</CustomField>