force-app/main/default/objects/Account/fields/SEN__c.field-meta.xml
<CustomField>
    <fullName>SEN__c</fullName>
    <formula>IF( SEN_Number__c &gt;0,TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SEN</label>
    <type>Checkbox</type>
</CustomField>