force-app/main/default/objects/Account/fields/SEN_Number__c.field-meta.xml
<CustomField>
    <fullName>SEN_Number__c</fullName>
    <label>SEN Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>